kubernetes/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
        - name: api
          image: asia-northeast1-docker.pkg.dev/stego-426014/stego-docker-prd/api:c0289c151728ede771ea7db3a013d535053f6544
          ports:
            - containerPort: 8080
              protocol: TCP
