kubernetes/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: NodePort
